--- a/style.css
+++ b/style.css
@@ -1,1 +1,48 @@
-@charset 
+@charset "UTF-8";
+
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Passion+One:wght@400;700;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Sriracha&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Passion+One:wght@400;700;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Sriracha&display=swap');
+
+
+:root {
+    --cor0: #EDCB0C; /* COR ORIGINAL*/
+    --cor1: #F9DD3F;
+    --cor2: #927C00;
+
+    --fonte-padrão: Ariel, Helvetica;
+    --fonte-destaque: Roboto;
+    --fonte-especial: Roboto Mono;
+}
+
+* {
+    padding: 0px;
+    margin: 0px;
+}
+
+header {
+    
+    color: var(--cor0);
+    text-shadow: 1px 1px 3px rgba(255, 233, 110, 0.404);
+}
+
+header img {
+   display: flex;
+}
+
+header h1#titulo {
+    font-family: var(--fonte-especial);
+    font-weight: bolder;
+    font-size: 40px;
+    margin: 0px;
+}
+
+header h1 {
+    font-family: var(--fonte-especial);
+    font-weight: normal;
+    font-size: 36px;
+    margin-top: -24px;
+    margin-left: -158px;
+
+    text-align: center;
+}
