--- a/style.css
+++ b/style.css
@@ -21,12 +21,12 @@
 }
 
 header {
-    background: black;
+    background-image: linear-gradient(to right, var(--cor2), #3d3401, black,black,black,black,black,black,black,#3d3401, var(--cor2));
     color: var(--cor0);
     text-shadow: 1px 1px 2px rgba(182, 160, 160, 0.747);
 
     position: relative;
-    height: 33vh;
+    height: 30vh;
 }
 
 header img {
@@ -60,7 +60,7 @@ nav {
     font-family: var(--fonte-padrão);
     background: black;
     text-align: center;
-    height: 7vh;
+    height: 6vh;
 
     box-shadow: 1px 1px 5px black;
 }
