deixando main mais adequado

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 }
 
 header {
-    background-image: linear-gradient(to right, var(--cor2), #3d3401, black,black,black,black,black,black,black,#3d3401, var(--cor2));
+    background-image: linear-gradient(to right, var(--cor2), #3d3401, black,black,black,black,black,black,black, black, #3d3401, var(--cor2));
     color: var(--cor0);
     text-shadow: 1px 1px 2px rgba(182, 160, 160, 0.747);
 
@@ -57,29 +57,60 @@ header h1 > strong {
 }
 
 nav {
+    margin-top: 6px;
     font-family: var(--fonte-padrão);
-    background-image: linear-gradient(to right, var(--cor2), #3d3401, black,black,black,black,black,black,black,#3d3401, var(--cor2));
+    background: white;
     text-align: center;
-    height: 7vh;
-
-    box-shadow: 1px 1px 5px black;
+    height: 4.5vh;
 }
 
 nav > a {
-    color: white;
+    color: black;
     text-decoration: none;
     padding-right: 18px;
     font-size: 19px;
 }
 
+nav:hover {
+    transform: translate(0px, 5px);
+    transition: transform 0.3s;
+    height: 6.3vh;
+}
+
 nav > a:hover {
-    color: var(--cor0);
+    color: var(--cor2);
+    text-decoration: underline;
 }
 
 main {
-    background-color: rgb(68, 68, 68);
+    background: black;
 }
 
 section {
-    background-color: rgb(255, 255, 255);
+    color: white;
+    margin-left: 10%;
+    margin-right: 10%;
+
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+}
+
+section > h1 {
+    color: var(--cor0);
+    text-shadow: 0px 1px 1px #EDCB0C;
+    text-align: center;
+    font-family: var(--fonte-destaque);
+    font-size: 1.7em;
+    padding-top: 18px;
+}
+
+section > p {
+    text-align: justify;
+    margin: 10px;
+    font-family: var(--fonte-padrão);
+}
+
+section img {
+    display: flex;
+    margin: auto;
 }
