--- a/style.css
+++ b/style.css
@@ -72,18 +72,17 @@ nav > a {
 }
 
 nav:hover {
-    transform: translate(0px, 5px);
-    transition: transform 0.3s;
-    height: 6.3vh;
+    transform: translate(0px, 10px);
+    transition: transform 0.5s;
+    height: 5.9vh;
 }
 
 nav > a:hover {
     color: var(--cor2);
-    text-decoration: underline;
 }
 
 main {
-    background: black;
+    background-image: linear-gradient(to right, var(--cor2), #3d3401, black,black,black,black,black,black,black, black, #3d3401, var(--cor2));
 }
 
 section {
@@ -108,6 +107,10 @@ section > p {
     text-align: justify;
     margin: 10px;
     font-family: var(--fonte-padrão);
+    line-height: 1.3em;
+    letter-spacing: 2px;
+    margin-left: 15%;
+    margin-right: 15%;
 }
 
 section img {
