--- a/style.css
+++ b/style.css
@@ -20,6 +20,10 @@
     margin: 0px;
 }
 
+body {
+   background-image: linear-gradient(to right, var(--cor2), #3d3401, black,black,black,black,black,black,black, black, #3d3401, var(--cor2));;
+}
+
 header {
     background-image: linear-gradient(to right, var(--cor2), #3d3401, black,black,black,black,black,black,black, black, #3d3401, var(--cor2));
     color: var(--cor0);
@@ -57,7 +61,8 @@ header h1 > strong {
 }
 
 nav {
-    margin-top: 6px;
+    margin-top: 0px;
+    padding-top: 5px;
     font-family: var(--fonte-padrão);
     background: white;
     text-align: center;
@@ -67,14 +72,8 @@ nav {
 nav > a {
     color: black;
     text-decoration: none;
-    padding-right: 18px;
+    padding-right: 12px;
     font-size: 19px;
-}
-
-nav:hover {
-    transform: translate(0px, 10px);
-    transition: transform 0.5s;
-    height: 5.9vh;
 }
 
 nav > a:hover {
@@ -82,7 +81,10 @@ nav > a:hover {
 }
 
 main {
-    background-image: linear-gradient(to right, var(--cor2), #3d3401, black,black,black,black,black,black,black, black, #3d3401, var(--cor2));
+    background-color: rgb(0, 0, 0);
+    min-width: 400px;
+    max-width: 800px;
+    margin: auto;
 }
 
 section {
@@ -108,12 +110,19 @@ section > p {
     margin: 10px;
     font-family: var(--fonte-padrão);
     line-height: 1.3em;
-    letter-spacing: 2px;
-    margin-left: 15%;
-    margin-right: 15%;
+    letter-spacing: 1.5px;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 section img {
-    display: flex;
+    padding-top: 15px;
+    display: block;
     margin: auto;
+    width: 100%;
+}
+
+ ::-webkit-scrollbar {
+    width: 0px;
+    height: 0px;
 }
