--- a/style.css
+++ b/style.css
@@ -61,6 +61,10 @@ header h1 > strong {
 }
 
 nav {
+    min-width: 400px;
+    max-width: 800px;
+    margin: auto;
+
     margin-top: 10px;
     padding-top: 5px;
     font-family: var(--fonte-padrão);
