--- a/style.css
+++ b/style.css
@@ -61,9 +61,7 @@ header h1 > strong {
 }
 
 nav {
-    min-width: 400px;
-    max-width: 800px;
-    margin: auto;
+    width: 100%;
 
     margin-top: 10px;
     padding-top: 5px;
