--- a/style.css
+++ b/style.css
@@ -61,12 +61,13 @@ header h1 > strong {
 }
 
 nav {
+    background-image: linear-gradient(to right, var(--cor2), #3d3401, rgb(255, 255, 255),rgb(255, 255, 255),rgb(255, 255, 255),rgb(255, 255, 255),rgb(255, 255, 255),rgb(255, 255, 255),rgb(255, 255, 255), rgb(255, 255, 255), #3d3401, var(--cor2));
+    color: var(--cor0);
+    
     width: 100%;
-
     margin-top: 10px;
-    padding-top: 5px;
+    padding-top: 9px;
     font-family: var(--fonte-padrão);
-    background: white;
     text-align: center;
     height: 4.7vh;
 }
@@ -74,8 +75,8 @@ nav {
 nav > a {
     color: black;
     text-decoration: none;
-    padding-right: 12px;
-    font-size: 19px;
+    padding-right: 20px;
+    font-size: 18px;
 }
 
 nav > a:hover {
