--- a/style.css
+++ b/style.css
@@ -61,9 +61,9 @@ header h1 > strong {
 }
 
 nav {
-    background-image: linear-gradient(to right, var(--cor2), #3d3401, rgb(255, 255, 255),rgb(255, 255, 255),rgb(255, 255, 255),rgb(255, 255, 255),rgb(255, 255, 255),rgb(255, 255, 255),rgb(255, 255, 255), rgb(255, 255, 255), #3d3401, var(--cor2));
+    background-color: white;
     color: var(--cor0);
-    
+
     width: 100%;
     margin-top: 10px;
     padding-top: 9px;
