--- a/style.css
+++ b/style.css
@@ -21,7 +21,11 @@
 }
 
 body {
-   background-image: linear-gradient(to right, var(--cor2), #3d3401, black,black,black,black,black,black,black, black, #3d3401, var(--cor2));;
+   background-image: linear-gradient(to right, var(--cor2), #3d3401, black,black,black,black,black,black,black, black, #3d3401, var(--cor2));
+}
+
+body footer {
+    background-color: rgb(0, 0, 0);
 }
 
 header {
@@ -84,7 +88,7 @@ nav > a:hover {
 }
 
 main {
-    background-color: rgb(0, 0, 0);
+    background-color: black;
     min-width: 400px;
     max-width: 800px;
     margin: auto;
@@ -123,6 +127,30 @@ section img {
     display: block;
     margin: auto;
     width: 100%;
+}
+
+hr {
+    margin-top: 45px;
+    
+}
+
+footer {
+    height: 90vh;
+}
+
+footer img {
+    margin-top: 25px;
+    padding-right: 50px;
+    padding-left: 35px;
+} 
+
+footer > a > img {
+    display: flex;
+    align-items: center;
+    margin-left: 50%;
+    transform: translate(-50%);
+
+    padding-top: 38px;
 }
 
  ::-webkit-scrollbar {
