--- a/style.css
+++ b/style.css
@@ -21,11 +21,7 @@
 }
 
 body {
-   background-image: linear-gradient(to right, var(--cor2), #3d3401, black,black,black,black,black,black,black, black, #3d3401, var(--cor2));
-}
-
-body footer {
-    background-color: rgb(0, 0, 0);
+   background-color: rgb(0, 0, 0);
 }
 
 header {
@@ -68,8 +64,8 @@ nav {
     background-color: white;
     color: var(--cor0);
 
-    margin-top: 10px;
-    padding-top: 9px;
+    margin-top: 0px;
+    padding-top: 8px;
     font-family: var(--fonte-padrão);
     text-align: center;
     height: 4.7vh;
@@ -132,19 +128,24 @@ footer {
     height: 90vh;
 }
 
-footer img {
-    margin-top: 25px;
-    padding-right: 50px;
-    padding-left: 35px;
+body footer {
+    background-color: rgba(61, 61, 61, 0.534);
+}
+
+footer a > img {
+    box-sizing: border-box;
+    margin-top: 35px;
+    margin-left: 10%;
 } 
 
-footer > a > img {
+footer > div#kl {
     display: flex;
     align-items: center;
-    margin-left: 50%;
+    margin-left: 55%;
     transform: translate(-50%);
 
     padding-top: 38px;
+    box-sizing: border-box;
 }
 
  ::-webkit-scrollbar {
