--- a/style.css
+++ b/style.css
@@ -133,6 +133,8 @@ body footer {
     background-color: rgba(61, 61, 61, 0.534);
 }
 
+/* todos patrocinios */
+
 footer a#i1 {
     margin-top: 30px;
     position: absolute;
@@ -174,6 +176,8 @@ footer a#i6 {
     margin-left: 80%;
     transform: translate(-80%);
 } 
+
+/* todos patrocinios */
 
 footer > div#kl {
     margin-top: 140px;
