--- a/style.css
+++ b/style.css
@@ -179,6 +179,8 @@ footer a#i6 {
 
 /* todos patrocinios */
 
+/* todas redes sociais */
+
 footer a#r1 {
     margin-top: 30px;
     position: absolute;
@@ -213,6 +215,8 @@ footer a#r5 {
     margin-left: 70%;
     transform: translate(-70%);
 }
+
+/* todas redes sociais */
 
 footer > div#kl {
     margin-top: 140px;
