--- a/times.css
+++ b/times.css
@@ -82,11 +82,6 @@ nav > a:hover {
     color: var(--cor2);
 }
 
-nav img { 
-    box-sizing: border-box;
-    margin-bottom: -5px;
-}
-
 main {
     background-color: black;
     min-width: 400px;
@@ -130,7 +125,7 @@ section img {
 }
 
 footer {
-    height: 90vh;
+    height: 95vh;
     margin: auto;
 }
 
@@ -184,11 +179,64 @@ footer a#i6 {
 
 /* todos patrocinios */
 
+/* todas redes sociais */
+
+footer a#r1 {
+    margin-top: 90px;
+    position: absolute;
+    margin-left: 20%;
+    transform: translate(-20%);
+}
+
+footer a#r2 {
+    margin-top: 90px;
+    position: absolute;
+    margin-left: 35%;
+    transform: translate(-35%);
+}
+
+footer a#r3 {
+    margin-top: 90px;
+    position: absolute;
+    margin-left: 50%;
+    transform: translate(-50%);
+}
+
+footer a#r4 {
+    margin-top: 90px;
+    position: absolute;
+    margin-left: 65%;
+    transform: translate(-65%);
+}
+
+footer a#r5 {
+    margin-top: 90px;
+    position: absolute;
+    margin-left: 80%;
+    transform: translate(-80%);
+}
+
+/* todas redes sociais */
+
 footer > div#kl {
-    margin-top: 140px;
+    margin-top: 165px;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+footer > p {
+    color: white;
+    margin-top: 200px;
+    margin-left: 15%;
+    margin-right: 15%;
+    font-size: 17px;
+}
+
+footer p a {
+    color: white;
+    text-decoration: none;
+    font-weight: bolder;
 }
 
  ::-webkit-scrollbar {
