--- a/estilos/classificação.css
+++ b/estilos/classificação.css
@@ -87,6 +87,28 @@ nav img {
     margin-bottom: -5px;
 }
 
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+tr#titulo {
+    background-color: rgba(61, 61, 61, 0.534);
+}
+
+tr {
+    background-color: rgba(169, 169, 169, 0.281);
+    
+}
+
+td {
+    font-family: Arial, Helvetica, sans-serif;
+    border: 1px solid rgba(109, 107, 107, 0.185);
+    text-align: center;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
 main {
     background-color: black;
     min-width: 400px;
@@ -101,6 +123,8 @@ section {
 
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
+
+    height: 100vh;
 }
 
 section > h1 {
@@ -109,7 +133,8 @@ section > h1 {
     text-align: center;
     font-family: var(--fonte-destaque);
     font-size: 1.7em;
-    padding-top: 18px;
+    padding-top: 40px;
+    padding-bottom: 20px;
 }
 
 section > p {
