--- a/estilos/classificação.css
+++ b/estilos/classificação.css
@@ -90,6 +90,8 @@ nav img {
 table {
     border-collapse: collapse;
     width: 100%;
+    margin: 0px;
+    padding: 0px;
 }
 
 div#tbl {
@@ -140,6 +142,16 @@ td#sf {
 td#qf {
     color: rgb(255, 255, 255);
     background-image: linear-gradient(to right, rgba(255, 255, 0, 0.719), rgba(61, 61, 61, 0.712), rgba(61, 61, 61, 0.712),rgba(61, 61, 61, 0.712));
+}
+
+p > strong#psf {
+    background-color: green;
+    color: green;
+}
+
+p > strong#pqf {
+    background-color: rgba(255, 255, 0, 0.719);
+    color: rgba(255, 255, 0, 0.719);
 }
 
 main {
