--- a/estilos/classificação.css
+++ b/estilos/classificação.css
@@ -117,8 +117,10 @@ td {
     font-family: Arial, Helvetica, sans-serif;
     border: 1px solid rgba(109, 107, 107, 0.185);
     text-align: center;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 12px;
+    padding-right: 12px;
+    padding-top: 7px;
+    padding-bottom: 7px;
 }
 
 td.posiç {
