--- a/estilos/classificação.css
+++ b/estilos/classificação.css
@@ -171,7 +171,7 @@ section {
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
 
-    height: 100vh;
+    height: 350vh;
 }
 
 section > h1 {
@@ -180,7 +180,7 @@ section > h1 {
     text-align: center;
     font-family: var(--fonte-destaque);
     font-size: 1.7em;
-    padding-top: 40px;
+    padding-top: 55px;
     padding-bottom: 20px;
 }
 
@@ -199,6 +199,7 @@ section img {
     display: block;
     margin: auto;
     width: 100%;
+    border-radius: 7px;
 }
 
 footer {
