--- a/estilos/classificação.css
+++ b/estilos/classificação.css
@@ -171,7 +171,7 @@ section {
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
 
-    height: 350vh;
+    height: 500vh;
 }
 
 section > h1 {
@@ -196,10 +196,50 @@ section > p {
 
 section img {
     padding-top: 15px;
+    padding-bottom: 10px;
     display: block;
     margin: auto;
     width: 100%;
     border-radius: 7px;
+}
+
+section > div#esta {
+    margin: -25px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+div#d1 img {
+    width: 225px;
+    height: 350px;
+}
+
+div#d2 img {
+    width: 225px;
+    height: 350px;
+}
+
+section > div#esta2 {
+    margin: -25px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+div#d3 img {
+    width: 225px;
+    height: 350px;
+}
+
+div#d4 img {
+    width: 225px;
+    height: 350px;
+}
+
+div#d5 img {
+    width: 225px;
+    height: 350px;
 }
 
 footer {
