--- a/retrato.css
+++ b/retrato.css
@@ -210,60 +210,60 @@ section img {
 section > div#esta {
     margin: -25px auto;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
 }
 
 div#d1 img {
     background-image: url(../imagens/fundo\ jogador.png);
-    width: 150px;
-    height: 210px;
+    width: 100px;
+    height: 150px;
 }
 
 div#d2 img {
     background-image: url(../imagens/fundo\ jogador.png);
-    width: 150px;
-    height: 210px;
+    width: 100px;
+    height: 150px;
 }
 
 /* jogadoires fileira 2 */
 
 section > div#esta2 {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
 }
 
 div#d3 img {
     background-image: url(../imagens/fundo\ jogador.png);
-    width: 150px;
-    height: 210px;
+    width: 100px;
+    height: 150px;
 }
 
 div#d4 img {
     background-image: url(../imagens/fundo\ jogador.png);
-    width: 150px;
-    height: 210px;
+    width: 100px;
+    height: 150px;
 }
 
 /* jogadoires fileira 3 */
 
 section > div#esta3 {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
 }
 
 div#d5 img {
     background-image: url(../imagens/fundo\ jogador.png);
-    width: 150px;
-    height: 210px;
+    width: 100px;
+    height: 150px;
 }
 
 div#d6 img {
     background-image: url(../imagens/fundo\ jogador.png);
-    width: 150px;
-    height: 210px;
+    width: 100px;
+    height: 150px;
 }
 
 /* estatsiticas de jogadoires FIM */
