--- a/retrato.css
+++ b/retrato.css
@@ -215,13 +215,13 @@ section > div#esta {
 }
 
 div#d1 img {
-    background-image: url(../imagens/fundo\ jogador.png);
+    background-image: url(../kings-league-site/imagens/fundo\ jogador\ pqn.png);
     width: 100px;
     height: 150px;
 }
 
 div#d2 img {
-    background-image: url(../imagens/fundo\ jogador.png);
+    background-image: url(../kings-league-site/imagens/fundo\ jogador\ pqn.png);
     width: 100px;
     height: 150px;
 }
@@ -235,13 +235,13 @@ section > div#esta2 {
 }
 
 div#d3 img {
-    background-image: url(../imagens/fundo\ jogador.png);
+    background-image: url(../kings-league-site/imagens/fundo\ jogador\ pqn.png);
     width: 100px;
     height: 150px;
 }
 
 div#d4 img {
-    background-image: url(../imagens/fundo\ jogador.png);
+    background-image: url(../kings-league-site/imagens/fundo\ jogador\ pqn.png);
     width: 100px;
     height: 150px;
 }
@@ -255,15 +255,15 @@ section > div#esta3 {
 }
 
 div#d5 img {
-    background-image: url(../imagens/fundo\ jogador.png);
-    width: 50px;
-    height: 100px;
+    background-image: url(../kings-league-site/imagens/fundo\ jogador\ pqn.png);
+    width: 100px;
+    height: 150px;
 }
 
 div#d6 img {
-    background-image: url(../imagens/fundo\ jogador.png);
-    width: 50px;
-    height: 100px;
+    background-image: url(../kings-league-site/imagens/fundo\ jogador\ pqn.png);
+    width: 100px;
+    height: 150px;
 }
 
 /* estatsiticas de jogadoires FIM */
