--- a/retrato.css
+++ b/retrato.css
@@ -212,6 +212,7 @@ section > div#esta {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    padding-top: 20px;
 }
 
 div#d1 img {
@@ -232,6 +233,7 @@ section > div#esta2 {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    padding-top: 20px;
 }
 
 div#d3 img {
@@ -252,6 +254,7 @@ section > div#esta3 {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    padding-top: 20px;
 }
 
 div#d5 img {
