--- a/estilos/classificação.css
+++ b/estilos/classificação.css
@@ -213,6 +213,9 @@ section > div#esta {
     justify-content: space-between;
     align-items: center;
     padding-top: 25px;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom: 8%;
 }
 
 div#d1 img {
@@ -226,6 +229,7 @@ div#d1 h1 {
     font-family: var(--fonte-destaque);
     color: var(--cor0);
     padding: 5px;
+    padding-bottom: 20px;
 }
 
 div#d1 > div.container2 {
@@ -254,8 +258,9 @@ div#d2 img {
 div#d2 h1 {
     text-align: center;
     font-family: var(--fonte-destaque);
-    color: white;
+    color: rgb(255, 192, 76);
     padding: 5px;
+    padding-bottom: 20px;
 }
 
 div#d2 > div.container2 {
@@ -282,6 +287,9 @@ section > div#esta2 {
     justify-content: space-between;
     align-items: center;
     padding-top: 30px;
+    margin-left: 4%;
+    margin-right: 5%;
+    margin-bottom: 8%;
 }
 
 div#d3 img {
@@ -293,8 +301,9 @@ div#d3 img {
 div#d3 h1 {
     text-align: center;
     font-family: var(--fonte-destaque);
-    color: white;
+    color: rgb(255, 192, 76);
     padding: 5px;
+    padding-bottom: 20px;
 }
 
 div#d3 > div.container2 {
@@ -323,8 +332,9 @@ div#d4 img {
 div#d4 h1 {
     text-align: center;
     font-family: var(--fonte-destaque);
-    color: white;
+    color: rgb(255, 192, 76);
     padding: 5px;
+    padding-bottom: 20px;
 }
 
 div#d4 > div.container2 {
@@ -351,6 +361,8 @@ section > div#esta3 {
     justify-content: space-between;
     align-items: center;
     padding-top: 20px;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 
 div#d5 img {
@@ -362,8 +374,9 @@ div#d5 img {
 div#d5 h1 {
     text-align: center;
     font-family: var(--fonte-destaque);
-    color: white;
+    color: rgb(255, 192, 76);
     padding: 5px;
+    padding-bottom: 20px;
 }
 
 div#d5 > div.container2 {
@@ -392,8 +405,9 @@ div#d6 img {
 div#d6 h1 {
     text-align: center;
     font-family: var(--fonte-destaque);
-    color: white;
+    color: rgb(255, 192, 76);
     padding: 5px;
+    padding-bottom: 20px;
 }
 
 div#d6 > div.container2 {
@@ -409,8 +423,8 @@ div#d6 > div.container2 > img.semfundo {
 
 div#d6 > div.container2 > h2 {
     font-family: var(--fonte-padrão);
-    margin-right: 30px;
-    margin-left: -20px;
+    margin-right: 15px;
+    margin-left: 0px;
 }
 
 /* estatsiticas de jogadoires FIM */
