--- a/retrato.css
+++ b/retrato.css
@@ -224,6 +224,7 @@ div#d1 h1 {
     text-align: center;
     font-family: var(--fonte-destaque);
     color: var(--cor0);
+    margin-top: 10px;
     padding: 20px;
 }
 
@@ -236,12 +237,12 @@ div#d1 > div.container2 > img.semfundo {
     background-image: url(../);
     width: 50px;
     height: 50px;
-    margin-right: 65px;
+    margin-right: 40px;
 }
 
 div#d1 > div.container2 > h2 {
     font-family: var(--fonte-padrão);
-    margin-right: 120px;
+    margin-right: 115px;
 }
 
 div#d2 img {
@@ -254,6 +255,7 @@ div#d2 h1 {
     text-align: center;
     font-family: var(--fonte-destaque);
     color: white;
+    margin-top: 25px;
     padding: 20px;
 }
 
@@ -266,12 +268,12 @@ div#d2 > div.container2 > img.semfundo {
     background-image: url(../);
     width: 50px;
     height: 50px;
-    margin-right: 65px;
+    margin-right: 40px;
 }
 
 div#d2 > div.container2 > h2 {
     font-family: var(--fonte-padrão);
-    margin-right: 120px;
+    margin-right: 115px;
 }
 
 /* jogadoires fileira 2 */
@@ -293,6 +295,7 @@ div#d3 h1 {
     text-align: center;
     font-family: var(--fonte-destaque);
     color: white;
+    margin-top: 25px;
     padding: 20px;
 }
 
@@ -323,6 +326,7 @@ div#d4 h1 {
     text-align: center;
     font-family: var(--fonte-destaque);
     color: white;
+    margin-top: 25px;
     padding: 20px;
 }
 
@@ -362,6 +366,7 @@ div#d5 h1 {
     text-align: center;
     font-family: var(--fonte-destaque);
     color: white;
+    margin-top: -25px;
     padding: 20px;
 }
 
@@ -374,12 +379,12 @@ div#d5 > div.container2 > img.semfundo {
     background-image: url(../);
     width: 50px;
     height: 50px;
-    margin-right: 70px;
+    margin-right: 30px;
 }
 
 div#d5 > div.container2 > h2 {
     font-family: var(--fonte-padrão);
-    margin-right: 70px;
+    margin-right: 100px;
 }
 
 div#d6 img {
@@ -392,6 +397,7 @@ div#d6 h1 {
     text-align: center;
     font-family: var(--fonte-destaque);
     color: white;
+    margin-top: 25px;
     padding: 20px;
 }
 
@@ -404,12 +410,12 @@ div#d6 > div.container2 > img.semfundo {
     background-image: url(../);
     width: 50px;
     height: 50px;
-    margin-right: 60px;
+    margin-right: 10px;
 }
 
 div#d6 > div.container2 > h2 {
     font-family: var(--fonte-padrão);
-    margin-right: 40px;
+    margin-right: 100px;
 }
 
 /* estatsiticas de jogadoires FIM */
