finalizado pagina de times para computador

--- a/estilos/times.css
+++ b/estilos/times.css
@@ -158,6 +158,10 @@ div p {
     margin-right: 4%;
 }
 
+div#ultimaImg {
+    padding-bottom: 25px;
+}
+
 footer {
     height: 95vh;
     margin: auto;
