--- a/estilos/retrato(classificação).css
+++ b/estilos/retrato(classificação).css
@@ -171,7 +171,7 @@ section {
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
 
-    height: 3000px;
+    height: 3100px;
 }
 
 section > h1 {
@@ -231,6 +231,7 @@ div#d1 h1 {
 div#d1 > div.container2 {
     display: flex;
     align-items: center;
+    padding-bottom: 27px;
 }
 
 div#d1 > div.container2 > img.semfundo {
@@ -262,6 +263,7 @@ div#d2 h1 {
 div#d2 > div.container2 {
     display: flex;
     align-items: center;
+    padding-bottom: 27px;
 }
 
 div#d2 > div.container2 > img.semfundo {
@@ -302,6 +304,7 @@ div#d3 h1 {
 div#d3 > div.container2 {
     display: flex;
     align-items: center;
+    padding-bottom: 27px;
 }
 
 div#d3 > div.container2 > img.semfundo {
@@ -333,6 +336,7 @@ div#d4 h1 {
 div#d4 > div.container2 {
     display: flex;
     align-items: center;
+    padding-bottom: 27px;
 }
 
 div#d4 > div.container2 > img.semfundo {
@@ -373,6 +377,7 @@ div#d5 h1 {
 div#d5 > div.container2 {
     display: flex;
     align-items: center;
+    padding-bottom: 27px;
 }
 
 div#d5 > div.container2 > img.semfundo {
